我的音乐歌单title

--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -3,4 +3,5 @@ $theme: #e9493d;
 $tagRed: #cf463e;
 $tagBlue: #499ddd;
 $fontColor: #333132;
-$subFont: #989898;
+$subFont: #626262;
+$grayFont: #989898;
