--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,12 @@ body, html {
 img {
   display: block;
 }
+
+button {
+  display: block;
+  border: 0;
+  width: 100%;
+  &:focus {
+    outline: 0;
+  }
+}
